spacing issue fixed, menu icon fixed

--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,18 @@
 
 html{
     scroll-behavior: smooth;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 body{
     color: var(--second-color);
     background-color: var(--first-color);
-    margin: 2rem 0 0 0;
+    margin: 0 0 0 0;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
     transition: 0.5s ease;
 }
  
@@ -123,12 +129,12 @@ header.sticky .nav-bar{
 .nav-bar .logo{
     font-size: 1.3em;
     font-weight: 500;
-    color: var(--second-color);
+    color: var(--text-highlight-color);
 }
 
 .nav-items a{
     font-size: var(--normal-font-size);
-    color: var(--second-color);
+    color: var(--text-highlight-color);
     font-weight: 500;
 }
 
@@ -152,7 +158,7 @@ header.sticky .nav-bar{
 
 .home{
     position: relative;;
-    max-width: 100%;
+    width: 100%;
     min-height: 100vh;
     margin-left: auto;
     margin-right: auto;
@@ -164,29 +170,27 @@ header.sticky .nav-bar{
 
 .home-container h2{
     color: var(--third-color);
-    font-size: 6em;
-    font-weight: 600;
-    line-height: 130px;
-    
+    font-size: clamp(30px, 8vw, 6rem);
+    font-weight: 600;    
 }
 
 .home-container h3{
     color: #ffffff97;
-    font-size: 4em;
+    font-size: clamp(20px, 6vw, 4rem);
     font-feature-settings: 1.3em;
     font-weight: 500;
-    line-height: 80px;
 }
 .home-container p{
     color: var(--text-highlight-color);
-    font-size: 1.1em;
+    font-size: clamp(1rem, 2.5vw, 1.3rem);
     font-weight: 500;
 }
 
 .home-container .info p{
     color: var(--text-color);
-    font-size: var(--normal-font-size);
+    font-size: clamp(0.8rem, 2.5vw, 1rem);
     max-width: 350px;
+    margin-top: 10px;
 }
 
 .btn{
@@ -512,14 +516,13 @@ header.sticky .nav-bar{
 .contact {
     width: 100%;
     position: relative;;
-    max-width: 1250px;
     min-height: 90vh;
     margin-left: auto;
     margin-right: auto;
     padding: 4.3rem 2rem;
     display: flex;
-    justify-content: left;
-    align-items:left;
+    justify-content: center;
+    align-items:center;
 }
 
 .contact-container{
@@ -527,9 +530,9 @@ header.sticky .nav-bar{
 }
 
 .content-contact{
-    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
 .contact-container h2{
@@ -711,9 +714,11 @@ footer i{
 
 
 .nav-menu-btn{
-    display: block;
-    background-size: 30px;
-    background-position: center;
+    color: var(--text-highlight-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: 40px;
     width: 40px;
     height: 40px;
     cursor: pointer;
@@ -750,19 +755,6 @@ footer i{
     cursor: pointer;
 }
 
-/*  Home  */
-
-.home-container h2{
-    font-size: 5em;
-}
-
-.home-container p{
-    font-size: 1em;
-}
-
-.home-container.info p{
-    font-size: 0.7em;
-}
 
 /* About Me */
 .about .about-container .about-info{
@@ -778,12 +770,13 @@ footer i{
 .profile-pic img{
     padding-left:0;
 }
+
+.contact .contact-container .content-contact{
+    display: grid;
+    row-gap: 20px;
+    width: 100%;
+}
+
+
 }
     
-@media screen and (max-width: 640px){
-    .contact .contact-container .content-contact{
-        display: grid;
-        width: 100%;
-        row-gap: 20px;
-    }
-}
